# vixx

./: .clang-format  CMakeLists.txt  LICENSE  README.md  vixx
doc/: A-paradoxical-ode.txt  HarryPotter-1.txt
include/backend/: buffer.h  editor.h  tab.h
include/common/: types.h  utils.h
include/frontend/: input_handler.h  renderer.h
src/: main.cpp
src/backend/: buffer.cpp  editor.cpp  tab.cpp
src/common/: utils.cpp
src/frontend/: input_handler.cpp  renderer.cpp
test/: buffer_tests.cpp  editor_tests.cpp
